<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_white"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/line_grey" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dip"
        android:src="@drawable/ic_mattress"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_settings_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:textColor="@color/dark_grey"
        tools:text="V1.0" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="50dp"
        android:background="@color/line_grey" />

    <RelativeLayout
        android:id="@+id/rl_settings_update"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/settings_tv_update"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_settings_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/settings_tv_check"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/line_grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/settings_tv_intro"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/mm_submenu" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/line_grey" />
</LinearLayout>
